samples/_failures_safe/1761703827_c01b98_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_613a1c52.c: In function ‘main’:
./samples/SAFE/__tmp_613a1c52.c:178:16: error: missing terminating " character
  178 |         printf("State machine failed with error code: %
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_613a1c52.c:178:9: error: expected expression at end of input
  178 |         printf("State machine failed with error code: %
      |         ^~~~~~
./samples/SAFE/__tmp_613a1c52.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_613a1c52.c:178:9: error: expected declaration or statement at end of input
